2000-06-08  Jim Whitehead  <jnwhiteh@mailbox.syr.edu>

	* tocstr.el: Integrated the patch into tocstr.el.  Used the 
	tnt-timers-available functionality to save compatability.  The
	"enhancements" will be available in all versions of emacs containing
	the run-at-time procedure.
	(tnt-handle-nick): Added a small hack here to set the tnt-current-user
	to tnt-username instead of what the server supposedly sends back to us.

2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-nick): if we're supposed to be forwarding to
	email, notify that we successfully reconnected (we were already
	notifying when the connection is closed).

2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-set-away): added.  does basically everything
	get-away-msg used to do, except for the part about getting the
	away message.
	(tnt-get-away-msg): now just gets the away message.
	(tnt-away-toggle): now calls set-away, passing in the result of
	get-away-msg.
	(tnt-reconnecting-away): added.
	(tnt-reconnecting-away-msg): added.
	(tnt-handle-closed): now saves away status (tnt-away and
	tnt-away-msg).
	(tnt-handle-nick): now restores away status.

2000-06-01  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-reconnecting): added.
	(tnt-handle-closed): now sets reconnecting flag.
	(tnt-handle-nick): now checks reconnecting flag -- if it's t,
	make it nil; if it's already nil, show the buddy list.

2000-05-27  Jim Whitehead  <jnwhiteh@syr.edu>

	* tnt.el (tnt-fetch-info): fixed the regexp so it works.

2000-05-26  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-message-on-buddy-signonoff): changed name from
	"show-buddy-signonoff", to be consistent with "beep-on-..." vars. 
	(tnt-set-buddy-status): changed name of var

2000-05-26  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-open): added "Attempting to sign on..." message
	(tnt-buddy-list-mode-map): added tnt-fetch-info binding
	(tnt-fetch-info): added